--- a/.drone.yml
+++ b/.drone.yml
@@ -30,6 +30,7 @@ steps:
     script:
     - mkidr /code
     - cd /code
+    - docker rmi -f buglan/drone-demo
     - docker pull buglan/drone-demo:latest
     - echo "almost done"
     - docker run -p 5000:5000 -d buglan/drone-demo
