--- a/.drone.yml
+++ b/.drone.yml
@@ -30,8 +30,9 @@ steps:
     script:
     - mkidr /code
     - cd /code
+    - docker kill drone-demo
     - docker rmi -f buglan/drone-demo
     - docker pull buglan/drone-demo:latest
     - echo "almost done"
-    - docker run -p 5000:5000 -d buglan/drone-demo
+    - docker run --name=drone-demo -p 5000:5000 -d buglan/drone-demo
     - echo 'success'
